Fix bad contrast ratio with secondary text in dark mode

--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -5,7 +5,7 @@ html {
 .light-mode {
   --color-icon: #6b7280;
   --color-text: hsl(221, 39%, 11%);
-  --color-text-secondary: hsl(220, 9%, 46%);
+  --color-text-secondary: var(--color-icon);
   --color-text-inactive: hsl(215, 14%, 34%);
   --color-text-dark: #1a202c;
   --color-heading: #2c313d;
